changed js and css to caps.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="At Decor design we provide artificial flowers that look twice as good as real flowers, at a fraction of the price.">
 	<title>Decor Design | Artificial Flowers</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="sha384-2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
-	<link href="css/style-page1.css" rel="stylesheet">	
+	<link href="CSS/style-page1.css" rel="stylesheet">	
 </head>
 
 
@@ -144,7 +144,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="sha384-VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script>
-<script src="js/custom.js"></script>
+<script src="JS/custom.js"></script>
 
 </body>
 </html>
