--- a/gallery.html
+++ b/gallery.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Decor Design | Gallery</title>
-  <link rel="stylesheet" href="css/bootstrap3_grid.css">
+  <link rel="stylesheet" href="CSS/bootstrap3_grid.css">
   <!--<link href="//cdn.rawgit.com/noelboss/featherlight/1.5.0/release/featherlight.min.css" type="text/css" rel="stylesheet" />-->
-  <link rel="stylesheet" href="css/featherlight.css">
-  <link rel="stylesheet" href="css/styles-gallery.css">
+  <link rel="stylesheet" href="CSS/featherlight.css">
+  <link rel="stylesheet" href="CSS/styles-gallery.css">
 </head>
 
 <body><!--Opening Body Tag-->
@@ -100,10 +100,10 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="JS/bootstrap.min.js"></script>
     <!--<script src="//cdn.rawgit.com/noelboss/featherlight/1.5.0/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script> -->
-    <script src="js/featherlight.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="JS/featherlight.js"></script>
+    <script src="JS/custom.js"></script>
 
 </body>
 </html>
